--- a/Front End/package.json
+++ b/Front End/package.json
@@ -10,6 +10,7 @@
     "aws-sdk": "^2.713.0",
     "grommet": "^2.14.0",
     "material-ui-dropzone": "^3.3.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.1",
