--- a/front-end scripts/package.json
+++ b/front-end scripts/package.json
@@ -13,13 +13,17 @@
     "grommet": "^2.14.0",
     "http": "0.0.1-security",
     "material-ui-dropzone": "^3.3.0",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "node-sass": "^4.14.1",
+    "path": "^0.12.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.1",
     "react-scripts": "3.4.1",
     "react-toggle-component": "^3.0.8",
     "styled-components": "^5.1.1",
+    "url": "^0.11.0",
     "uuid": "^8.2.0"
   },
   "scripts": {
